--- a/gb/24/1/15/n14158538.md
+++ b/gb/24/1/15/n14158538.md
@@ -1,57 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>悉尼两成小学生毕业后进入私校学习</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2010/05/1005080800392124-600x400.jpg" />
 <h6>北悉尼蒙特桑特安杰洛梅西宗教学校（简沐/摄影）
 </h6>
 <hr>
-<p>【大纪元2024年01月15日讯】（大纪元记者天睿澳洲悉尼编译报导）悉尼越来越多的家长选择送孩子去私立中学上学，大约五分之一的学生从<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">公立学校</a>流入<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%81%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">私立学校</a>。</p>
+<p>【大纪元2024年01月15日讯】（大纪元记者天睿澳洲悉尼编译报导）悉尼越来越多的家长选择送孩子去私立中学上学，大约五分之一的学生从公立学校流入私立学校。</p>
 <p>据《悉尼晨锋报》报导，教育厅数据显示，2021年至2022年间，超过9000名小学六年级学生退出了公立系统，相当于该年级总人数的21%。而十年前的这一数据只有6000多。</p>
-<p>从新州范围来看，目前大约1.2万名小学生毕业后进入了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%81%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">私立学校</a>。</p>
-<p>在悉尼，加拿大湾（Canada Bay）、贝赛（Bayside）和坎伯兰（Cumberland）地方政府辖区<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">公立学校</a>的学生流失最严重。2021年毕业的小学生中，就读公立高中的学生数量减少了50%以上。</p>
+<p>从新州范围来看，目前大约1.2万名小学生毕业后进入了私立学校。</p>
+<p>在悉尼，加拿大湾（Canada Bay）、贝赛（Bayside）和坎伯兰（Cumberland）地方政府辖区公立学校的学生流失最严重。2021年毕业的小学生中，就读公立高中的学生数量减少了50%以上。</p>
 <p>人口统计学家麦克林德尔（Mark McCrindle）表示，全澳范围内的私立教育系统普遍存在的这种趋势，在一定程度上，是由80后父母推动的，虽然该群体中拥有宗教信仰的比例下降，但这一代人倾向于为孩子选择教会学校就读，因为他们认同教会学校的价值观。</p>
 <p>独立智库格拉坦研究所（Grattan Institute）教育项目主任亨特（Jordana Hunter）表示，公立系统有必要向家长证明公立学校能够提供高质量的教育。</p>
-<p>“家长选择学校的原因有很多，其中一个原因是他们为子女选择同伴。经济条件好的家长可能会选择同阶层人的孩子上的学校。这样的结果是公立学校聚集了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%B6%E5%A2%83.md#1">家境</a>不太好的学生，这可能给教学和学习带来挑战。”</p>
+<p>“家长选择学校的原因有很多，其中一个原因是他们为子女选择同伴。经济条件好的家长可能会选择同阶层人的孩子上的学校。这样的结果是公立学校聚集了家境不太好的学生，这可能给教学和学习带来挑战。”</p>
 <p>但新州中学校长理事会主席彼得森（Craig Petersen）表示，将社会经济因素计入考量后，公立学校在HSC高考和其成绩方面的表现与私立学校并无差异。</p>
 <p>责任编辑：宗敏青</p>
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击</strong><strong>?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157808.md#1">石棉污染扩散至悉尼内西区公园外</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/14/n14157911.md#1">澳洲反常降雨冲击厄尔尼诺干旱预期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158562.md#1">铁人三项运动员伸援手 悉尼海滩25名游客获救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158490.md#1">民调：大多数澳洲人认同1月26日为国庆日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158513.md#1">黑客窃取澳总理府外交部等关键机构敏感数据</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158487.md#1">忧隐私安全 澳多家企业移除TikTok数据追踪工具</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158485.md#1">强降雨过后 悉尼居民被警告当心洪水暴发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/14/n14157936.md#1">联邦政府拨款近两亿打击非法烟草</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/14/n14157838.md#1">逾八成选民认为工党解决生活成本危机失败</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/13/n14157808.md#1">石棉污染扩散至悉尼内西区公园外</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14157911.md#1">澳洲反常降雨冲击厄尔尼诺干旱预期</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419283.md#1">三年损失3.5亿元 知名在线零售商Catch即将停业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419286.md#1">忧出行安全 澳父母大手笔花钱给子女买手机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419279.md#1">蜇人水母提前出现 昆州关闭75个海滩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419274.md#1">Peak Downs高速公路发生事故 载有硝酸铵卡车翻车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419240.md#1">买家需求疲软 悉尼和墨尔本房源激增</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419267.md#1">华裔外祖母做心脏压力测试后意外死亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419257.md#1">昆州采用新举措以减少道路创伤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419252.md#1">昆州逾三成医疗建筑老化危及医患安全</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/12/n11108237.md#1" target="_blank">张林：疯狂中共两次差点让中国人被灭绝</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/20/n11267496.md#1" target="_blank">少年心声：你若心里难受 就请看《转法轮》</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156773.md#1">水母状UFO现身伊拉克美军基地 画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152041.md#1">癌患者仅剩2个月生命 拒化疗后肿瘤奇迹消失</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156765.md#1">留意！为何甲辰龙年起连续五年没有“年三十”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/10/n14155162.md#1">蒋经国对共产党的认识</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156294.md#1">【未解之谜】美国迈阿密购物中心惊现“大灰人”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156720.md#1">【中国禁闻】中共又一军种出事？ 司令员消失半年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/14/n14158428.md#1">【时事军事】“击落”F-22？胡塞幻想打败美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157025.md#1">【新唐人快报】新冠变流感？青壮年中招骤逝多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156871.md#1">【更新】台湾大选 赖萧配获胜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157657.md#1">赖清德当选台湾总统 世界领导人回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157488.md#1">【快讯】赖清德当选中华民国总统</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156916.md#1">冯小刚《非诚勿扰3》票房惨淡 片方或亏3亿元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157734.md#1">胡歌新戏疑神秘替身晒照爆雷 微博账号遭清空</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14156945.md#1">周慧敏赴台完成工作后急返港 原因令人惊讶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157746.md#1">黄明志评台湾大选 吁珍惜民主帖文引共鸣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/13/n14157768.md#1">凭《麻辣鲜师》万老师一角走红 郭昱晴当选立委</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Bodum One 滤茶器 带双层玻璃套装 55%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151363.md#1">苹果加1物 调理肠胃降胆固醇最强吃法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139918.md#1">5大穴每天按一按 甩掉老花、近视</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149082.md#1">膝盖痛走不了？5个简单动作保养、自愈膝关节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/14/n14158101.md#1">飞行员透露 他们当飞机乘客时不做这7件事</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/15/n14158538.htm">悉尼两成小学生毕业后进入私校学习</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158538.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416009.md#1">【未解之谜】皮行者牧场（一）：美国境内的时空门？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413009.md#1">尾牙寻古：祭祀土地公从何时开始？传说中土地公如何成神？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406705.md#1">【古道人生】继母诚心培育前妻所生的三个儿子功成名就</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418302.md#1">【新闻大破解】收买媒体大外宣 中共对美超限战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418143.md#1">【晚间新闻】川普宣誓就职 各国领袖祝贺</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14417051.md#1">中共火箭专家及歼-20总设计师双双被免职</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417560.md#1">上海小学生期末考没拿100分 一家三口跳楼身亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415506.md#1">丰田和本田混动车 2025款CR-V与RAV4大比拼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418338.md#1">刀郎落榜多个音乐奖 被称演艺界“罗刹海市”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418418.md#1">真人《魔发奇缘》公主 弗萝伦丝普伊是热门人选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410842.md#1">人偏肺病毒感染高发 病毒专家教你怎样应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414131.md#1">如何找到冬季的隐藏之光 保持健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417919.md#1">戒酒一个月后身心有何惊人变化？ 专家释疑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418616.md#1">如何培养出高情商孩子？ 专家教你7招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/15/n14158538.htm">悉尼两成小学生毕业后进入私校学习</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/15/n14158538.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
